--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": [
     "@rocketseat/eslint-config/node",
-    "plugin:vitest-globals/recommended"
+    "plugin:vitest-globals/recommended",
+    "prettier"
   ],
   "rules": {
     "no-useless-constructor": "off",
